# corrosion

./: .gitignore  CMakeLists.txt  README.md
cmake/: Cargo.cmake  Corrosion.cmake  FindBindgen.cmake  FindRust.cmake
corrosion-macros/: Cargo.toml
corrosion-macros/src/: lib.rs
generator/src/subcommands/: build_crate.rs  gen_cmake.rs
integrator/src/: lib.rs
test/cpp2rust/: CMakeLists.txt  lib.cpp
test/cpp2rust/include/: lib.hpp
test/cpp2rust/rust/: Cargo.toml  build.rs
test/cpp2rust/rust/src/: main.rs
test/rust2cpp/: CMakeLists.txt
